[project]
name = "metro-bus-delays"
version = "0.1.0"
description = "Collection, storage, and visualisation of bus delay data for Christchurch Metro."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiocache>=0.12.3",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "google-api-python-client>=2.179.0",
    "gtfs-realtime-bindings>=1.0.0",
    "ijson>=3.4.0",
    "pandas>=2.3.1",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]
