[project]
name = "metro-bus-delays"
version = "0.1.0"
description = "Collection, storage, and visualisation of bus delay data for Christchurch Metro."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiocache>=0.12.3",
    "dash>=3.2.0",
    "dotenv>=0.9.9",
    "esda>=2.8.0",
    "fastapi[standard]>=0.116.1",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "google-api-python-client>=2.179.0",
    "gtfs-realtime-bindings>=1.0.0",
    "ijson>=3.4.0",
    "libpysal>=4.13.0",
    "matplotlib>=3.10.5",
    "nbformat>=5.10.4",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "shapely>=2.1.1",
    "waitress>=3.0.2",
]
